# hypax

./: .gitignore  README.md  nnx_mnist.py  pyproject.toml  pytest.ini  test_diffgeom.py
examples/: nnx_mnist.py
src/hax/: __init__.py
src/hax/array/: _manifold_array.py  _tangent_array.py
src/hax/manifolds/: __init__.py  _base.py
src/hax/manifolds/poincare_ball/: _diffgeom.py  _linalg.py
src/hax/opt/: __init__.py  _riemmanian_adam.py
src/hypax/array/: __init__.py  _manifold_array.py
src/hypax/manifolds/: __init__.py  _base.py
src/hypax/manifolds/poincare_ball/: __init__.py  _diffgeom.py  _linalg.py  _stats.py  manifold.py
src/hypax/nn/: __init__.py  _layer_init.py  activation.py  convolution.py  linear.py  pooling.py
src/hypax/opt/: _riemmanian_adam.py
src/hypax/util/: data.py
src/hypax/utils/: __init__.py  math.py
tests/: README.md  __init__.py  conftest.py
tests/accuracy/: __init__.py  test_diffgeom_accuracy.py  test_linalg_accuracy.py  test_nn_accuracy.py
tests/performance/: __init__.py
tests/performance/jax/: test_diffgeom_performance_jax.py
tests/performance/torch/: test_diffgeom_performance_torch.py
tests/unit/: __init__.py  test_activation.py  test_array_classes.py  test_convolution.py  test_poincare_ball.py  test_pooling.py
