[project]
name = "hypax"
version = "0.1.0"
description = "hyperbolic learning library in jax"
readme = "README.md"
authors = [
    { name = "Gijs de Jong", email = "gijs.de.jong@student.uva.nl" },
    { name = "Harold Ruiter", email = "harold.ruiter@student.uva.nl" },
]
requires-python = ">=3.11"
dependencies = ["flax>=0.10.2", "hypll>=0.1.1", "jax>=0.5.0", "torch>=2.5.1"]

[project.scripts]
hypax = "hypax:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "optax>=0.2.4",
    "tqdm>=4.67.1",
]
